03.business-os/AICompanyManager/900.meta/white_screen_root_cause_axu_r1_20260501_110001/061_browser_smoke.out
SMOKE_ROOT_HTML_LENGTH=0
SMOKE_HAS_CORE_CLASS=false
SMOKE_LISTENERS=
SMOKE_SYNC_ERROR_COUNT=1
SMOKE_UNHANDLED_COUNT=0
============================================================
SMOKE_SYNC_ERRORS
============================================================
/data/data/com.termux/files/home/03.civilization-development/03.business-os/AICompanyManager/assets/js/aicm-production-core.js:3955
      '        <th>期限</th>',\n      '        <th>操作</th>',
                            ^

SyntaxError: Invalid or unexpected token
    at new Script (node:vm:117:7)
    at createScript (node:vm:269:10)
    at Object.runInNewContext (node:vm:310:10)
    at file:///data/data/com.termux/files/home/03.civilization-development/03.business-os/AICompanyManager/900.meta/white_screen_root_cause_axu_r1_20260501_110001/060_browser_smoke.mjs:214:6
    at ModuleJob.run (node:internal/modules/esm/module_job:430:25)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:661:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)
